refactor builders to topologies